pass can act as normal input instead of using host bindings

--- a/src/app/actions/actions.component.html
+++ b/src/app/actions/actions.component.html
@@ -1,1 +1,6 @@
-<app-action *ngFor="let action of sortedActions" [action]="action"></app-action>
+<ng-container *ngIf="canAct">
+  <app-action
+    *ngFor="let action of sortedActions"
+    [action]="action"
+  ></app-action>
+</ng-container>
