--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -17,4 +17,4 @@
 <div class="description mat-body-1">
   {{ card.description }}
 </div>
-<app-actions [actions]="card.actions"></app-actions>
+<app-actions [actions]="card.actions" [canAct]="canAct"></app-actions>
