filter out action that cannot be triggered before render loop

--- a/src/app/actions/actions.component.html
+++ b/src/app/actions/actions.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="canAct">
   <app-action
-    *ngFor="let action of sortedActions"
+    *ngFor="let action of sortedTriggerableActions"
     [action]="action"
   ></app-action>
 </ng-container>
