--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -10,6 +10,7 @@
     ></app-player>
   </div>
 </div>
+<mat-divider [vertical]="true"></mat-divider>
 <div class="section forge">
   <div class="mat-title">
     Forge
@@ -31,6 +32,7 @@
     ></app-card>
   </div>
 </div>
+<mat-divider [vertical]="true"></mat-divider>
 <div class="section main">
   <div class="area" *ngIf="previousPlayerName">
     <div class="mat-title">Attacking Units - {{ previousPlayerName }}</div>
@@ -48,6 +50,7 @@
       </div>
     </div>
   </div>
+  <mat-divider></mat-divider>
   <div class="area play-area">
     <div class="mat-title">Play Area - {{ currentPlayerName }}</div>
     <div class="entity-container">
