--- a/src/app/game/game.component.sass
+++ b/src/app/game/game.component.sass
@@ -7,6 +7,9 @@
   min-height: 0
   overflow: auto
 
+.header
+  margin: 8px 0
+
 .players
   align-items: center
   display: flex
@@ -34,10 +37,10 @@
   flex-direction: column
 
 .area
-  align-items: center
   display: flex
   flex: 1
   flex-direction: column
+  padding: 8px 24px
 
 .discard-container
   max-height: 25vh
