add and use deck size api

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -95,7 +95,9 @@
   </div>
   <mat-divider></mat-divider>
   <div class="area">
-    <div class="mat-subheading-1 header">Current Hand</div>
+    <div class="mat-subheading-1 header">
+      Current Hand - {{ deckSize }} cards remaining in deck
+    </div>
     <div class="entity-container">
       <app-card
         class="hand"
