--- a/src/app/unit/unit.component.sass
+++ b/src/app/unit/unit.component.sass
@@ -34,6 +34,9 @@
   margin-right: 5px
   flex: 0 0 auto
 
+.expand
+  flex: 1
+
 .attributes
   color: red
   display: flex
@@ -44,3 +47,21 @@
 
 .description
   margin-bottom: 5px
+
+.circle
+  border-radius: 50%
+  display: inline-block
+  height: 16px
+  margin-left: 5px
+  width: 16px
+
+.red
+  background-color: red
+.green
+  background-color: green
+.blue
+  background-color: blue
+.yellow
+  background-color: yellow
+.black
+  background-color: black
