small css update

--- a/src/app/game/game.component.sass
+++ b/src/app/game/game.component.sass
@@ -8,9 +8,6 @@
   overflow-x: hidden
   overflow-y: auto
 
-.header
-  margin: 8px 0
-
 .players
   align-items: center
   display: flex
@@ -44,7 +41,7 @@
   display: flex
   flex: 1
   flex-direction: column
-  padding: 8px 24px
+  padding: 8px
 
 .discard-container
   max-height: 25vh
