--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -5,6 +5,7 @@
   display: flex
   flex-direction: column
   margin: 5px
+  min-width: 120px
   padding: 10px
   width: 9vw
   word-break: break-word
