--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -96,7 +96,7 @@
   <mat-divider></mat-divider>
   <div class="area">
     <div class="mat-subheading-1 header">
-      Current Hand - {{ deckSize }} cards remaining in deck
+      Current Hand - {{ deckSize }} cards in Draw Pile
     </div>
     <div class="entity-container">
       <app-card
