--- a/src/app/unit/unit.component.sass
+++ b/src/app/unit/unit.component.sass
@@ -1,6 +1,7 @@
 @use '~src/app/targetable'
 
 :host
+  background-color: #E3F2FD
   display: flex
   flex-direction: column
   margin: 5px
@@ -8,12 +9,6 @@
   padding: 10px
   width: 9vw
   word-break: break-word
-
-:host(.attacking)
-  background-color: #FFEBEE
-
-:host(.defending)
-  background-color: #E8F5E9
 
 .header
   display: flex
