--- a/src/app/unit/unit.component.sass
+++ b/src/app/unit/unit.component.sass
@@ -10,6 +10,15 @@
   width: 9vw
   word-break: break-word
 
+:host(.fade-in)
+  animation: fade-in 1s
+
+@keyframes fade-in
+  0%
+    opacity: 0
+  100%
+    opacity: 1
+
 .header
   display: flex
   margin-bottom: 5px
