--- a/src/app/card-container/card-container.component.sass
+++ b/src/app/card-container/card-container.component.sass
@@ -4,3 +4,8 @@
   flex: 0 0 auto
   flex-wrap: wrap
   justify-content: center
+
+.group
+  align-items: center
+  display: flex
+  flex-direction: column
