show triggerable actions for other players

--- a/src/app/action/action.component.html
+++ b/src/app/action/action.component.html
@@ -2,6 +2,7 @@
   <button
     mat-stroked-button
     [matTooltip]="action.description"
+    [disabled]="!canAct"
     (click)="beginAction($event)"
   >
     {{ action.name }}
