show unit description

--- a/src/app/unit/unit.component.html
+++ b/src/app/unit/unit.component.html
@@ -25,4 +25,7 @@
     attribute
   }}</span>
 </div>
+<div class="description mat-body-1">
+  {{ unit.description }}
+</div>
 <app-actions [actions]="unit.actions" [canAct]="canAct"></app-actions>
