--- a/src/app/player/player.component.sass
+++ b/src/app/player/player.component.sass
@@ -23,6 +23,15 @@
   display: flex
   margin-bottom: 5px
 
+.changed
+  animation: highlight 1s
+
+@keyframes highlight
+  0%
+    background-color: yellow
+  100%
+    background-color: transparent
+
 .wrap-tokens
   margin-right: 5px
   flex: 1
