--- a/src/app/player/player.component.sass
+++ b/src/app/player/player.component.sass
@@ -1,8 +1,8 @@
+@use '~src/app/entity'
 @use '~src/app/targetable'
 @import '~@angular/material/theming'
 
 :host
-  background-color: #EDE7F6
   display: flex
   flex-direction: column
   margin: 5px
