slight layout fix

--- a/src/app/game/game.component.sass
+++ b/src/app/game/game.component.sass
@@ -34,12 +34,11 @@
 
 .area
   display: flex
-  flex: 1
+  flex: 1 1 auto
   flex-direction: column
   overflow: auto
   padding: 8px
 
 .discard-area
   max-height: 25vh
-  min-height: 0
   overflow: auto
