--- a/src/app/unit-container/unit-container.component.html
+++ b/src/app/unit-container/unit-container.component.html
@@ -9,5 +9,5 @@
   [card]="state.card"
   [previousUnit]="state.previousUnit"
   [canAct]="canAct"
-  [fadeIn]="state.fadeIn"
+  [enter]="state.enter"
 ></app-unit>
