--- a/src/app/card-container/card-container.component.html
+++ b/src/app/card-container/card-container.component.html
@@ -7,7 +7,7 @@
     [players]="players"
     [card]="state.card"
     [canAct]="canAct"
-    [fadeIn]="state.fadeIn"
+    [enter]="state.enter"
   ></app-card>
   <div *ngIf="dedupe && state.count && state.count > 1">
     {{ state.count }} copies
