--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -10,14 +10,16 @@
   width: 9vw
   word-break: break-word
 
-:host(.fade-in)
-  animation: fade-in 1s
+:host(.slide-in)
+  animation: slide-in 0.5s
 
-@keyframes fade-in
+@keyframes slide-in
   0%
     opacity: 0
+    transform: translateY(75%)
   100%
     opacity: 1
+    transform: translateY(0%)
 
 .header
   display: flex
